tools/tests/ui/fail/l1076.cnf
// Test file for error code: L1076
// Expected error: Overflow TEXT-UTF8 character in control flow -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
